# PacPac

./: .gitignore  .gitmodules  CMakeLists.txt  DEVLOG.md  README.md  build.bat  build.sh
client/: CMakeLists.txt
client/assets/maps/: map_classic.txt
client/include/core/: consolelog.hpp  fileloader.hpp  timer.hpp
client/include/engine/: consoleLog.hpp  drawable.hpp  entity.hpp  entity.tpp  entitymanager.hpp  eventhandler.hpp  spritemanager.hpp
client/include/entities/: gameEntity.hpp
client/include/game/: direction.hpp  gamepanel.hpp  global.hpp  map.hpp
client/src/: gamepanel.cpp  main.cpp
client/src/core/: fileloader.cpp
client/src/engine/: consoleLog.cpp  spritemanager.cpp
client/src/entities/: pacman.cpp
client/src/game/: entitymanager.cpp  gamepanel.cpp  map.cpp
